<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/settingVerticalLayout"
    android:minWidth="280px">

<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/font" android:layout_gravity="center_horizontal" />
<Spinner android:layout_height="wrap_content" android:id="@+id/SettingsFontSpinner" android:layout_width="fill_parent" />
<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/color_theme" android:layout_gravity="center_horizontal" />
<Spinner android:layout_height="wrap_content" android:id="@+id/ColorThemeSpinner" android:layout_width="fill_parent" />
<Button android:id="@+id/SettingsSave" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/save"></Button>
</LinearLayout>